--- a/latex/future_of_gpus.tex
+++ b/latex/future_of_gpus.tex
@@ -50,6 +50,17 @@ CUDA 5 introduced support for MPI directly from the GPU. But we are proponents f
 The latest version of OpenMP (v4.0) introduces pragmas for offloading computation to accelerators. These pragmas will function similarly to pragmas from PGI, OpenACC, and the Intel MIC. 
 
 
+\chapter{Applications}
+\label{chap:applications}
+
+\section{Hyperbolic PDEs}
+\subsection{Cosine Bell Advection}
+\subsection{Vortex Roll-up}
+
+\section{GMRES for Stokes}
+
+
+
 \ifstandalone
 \bibliographystyle{plain}
 \bibliography{merged_references}
