--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-08-05 02:32:01 -0500 
+%% Created for Evan Bollig at 2013-08-05 03:08:34 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,8 +12,8 @@
 @misc{BolligSphereGrids,
 	Author = {E. F. Bollig},
 	Date-Added = {2013-08-05 07:28:46 +0000},
-	Date-Modified = {2013-08-05 07:30:39 +0000},
-	Howpublished = {\url{https://github.com/bollig/sphere_grids.git}},
+	Date-Modified = {2013-08-05 08:08:34 +0000},
+	Howpublished = {\url{https://github.com/bollig/sphere_grids}},
 	Month = {Aug},
 	Title = {Sphere Grids},
 	Year = {2012}}
