Larger fonts on figures

--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -1356,6 +1356,13 @@ Original data showed our algorithm as wildly successful against a version
 \label{fig:hash_results}
 \end{figure}
 
+\begin{figure}
+\centering
+\includegraphics[width=10.5cm]{../figures/stencils/cvt1m_stencil_gen_speedup.png}
+\includegraphics[width=10.5cm]{../figures/stencils/cvt1m_spmv_speedup.png} 
+\caption{As the coarse grid resolution increases the hashing algorithm achieves both 2x faster than KDTree in stencil generation, with greater than 4x gain in SpMV performance (for free).}
+\label{fig:hash_results}
+\end{figure}
 
 
 }
