Found a good RCM ref

--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-08-05 03:08:34 -0500 
+%% Created for Evan Bollig at 2013-08-06 04:36:00 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -3259,3 +3259,21 @@
 	Date-Modified = {2012-07-18 14:07:31 -0400},
 	Title = {OSKI: A library of automatically tuned sparse matrix kernels},
 	Year = {2005}}
+
+@article{LiuSherman1976,
+	Abstract = {In this paper we examine the Cuthill-McKee algorithm for ordering the unknowns and equations in systems of linear equations, Ax = b, where A is sparse, symmetric, and positive definite. This algorithm is designed to produce a permutation matrix P such that PAP<sup>T</sup> has a small bandwidth. If we wish to exploit zeros in the band of A which occur before the first nonzero in each row and column, it has been experimentally observed that reversing the ordering produced by the Cuthill-McKee algorithm is often very much better than the original ordering in terms of the amount of storage and work required to factor A. We prove that for band elimination methods, the two orderings are equivalent and that, surprisingly, the reverse ordering is always at least as good as the original one when envelope elimination techniques are used. We give a condition on the matrix A under which the reverse ordering is strictly better than the original one, and we include several numerical experiments and analyses of practical examples to illustrate our results.},
+	Author = {Liu, Wai-Hung and Sherman, Andrew H.},
+	Copyright = {Copyright {\copyright} 1976 Society for Industrial and Applied Mathematics},
+	Date-Modified = {2013-08-06 09:35:59 +0000},
+	Issn = {00361429},
+	Journal = {SIAM Journal on Numerical Analysis},
+	Language = {English},
+	Month = {Apr},
+	Number = {2},
+	Pages = {pp. 198-213},
+	Publisher = {Society for Industrial and Applied Mathematics},
+	Title = {Comparative Analysis of the Cuthill-McKee and the Reverse Cuthill-McKee Ordering Algorithms for Sparse Matrices},
+	Url = {http://www.jstor.org/stable/2156087},
+	Volume = {13},
+	Year = {1976},
+	Bdsk-Url-1 = {http://www.jstor.org/stable/2156087}}
