--- a/latex/explicit_pde_solutions.tex
+++ b/latex/explicit_pde_solutions.tex
@@ -115,7 +115,7 @@ Stencil Size ($n$) & $c_{1}$ & $c_{2}$ & $k$ & $\gamma_c$ \\ \hline
 	\caption{With Hyperviscosity}
 	\label{fig:vortex_eigs_hv}
 \end{subfigure}
-\caption{Eigenvalues of $\text{diag}(\omega(\theta)) D_\lambda$ for the vortex roll-up test case for $N=4096$ nodes, stencil size $n=101$ and $\epsilon = 3.5$. Left: no hyperviscosity. Right: hyperviscosity enabled with $k=4$ and $\gamma_c = 40$. }
+\caption{Eigenvalues of $\text{diag}(\omega(\theta)) D_\lambda$ for the vortex roll-up test case for $N=4096$ nodes, stencil size $n=101$ and $\epsilon = 3.5$. Left: no hyperviscosity. Right: hyperviscosity enabled with $k=4$ and $\gamma_c = 40$.\authnote{color} }
 \label{fig:eig_vortex}
 \end{center}
 \end{figure}
@@ -145,7 +145,7 @@ For this reason, the solution at $t=3$ is considered in the normalized $\ell_2$ 
 \begin{figure}[htbp!]
 \begin{center}
 \includegraphics[width=3in] {../figures/paper1/figures/vortex_rollup/convergence_plot_hv.pdf}
-\caption{Convergence plot for vortex roll-up at $t=3$. }
+\caption{Convergence plot for vortex roll-up at $t=3$. \authnote{color}}
 \label{fig:conv_plot_vortex_hv}
 \end{center}
 \end{figure}
@@ -223,7 +223,7 @@ Stencil Size ($n$) & $c_{1}$ & $c_{2}$ & $k$ & $\gamma_c$ \\ \hline
 	\caption{With Hyperviscosity}
 	\label{fig:cosine_eigs_hv}
 \end{subfigure}
-\caption{Eigenvalues of (\ref{eq:cosine_with_hyperviscosity}) for the cosine bell test case with $N=4096$ nodes, stencil size $n=101$, and $\epsilon = 3.5$. Left: no hyperviscosity. Right: hyperviscosity enabled with $k=8$ and $\gamma_c = 5*10^{-2}$. Eigenvalues are divided by $u_0$ to remove scaling effects of velocity.  
+\caption{Eigenvalues of (\ref{eq:cosine_with_hyperviscosity}) for the cosine bell test case with $N=4096$ nodes, stencil size $n=101$, and $\epsilon = 3.5$. Left: no hyperviscosity. Right: hyperviscosity enabled with $k=8$ and $\gamma_c = 5*10^{-2}$. Eigenvalues are divided by $u_0$ to remove scaling effects of velocity.  \authnote{color}
 }
 \label{fig:eig_cosine}
 \end{center}
@@ -242,7 +242,7 @@ Stencil Size ($n$) & $c_{1}$ & $c_{2}$ & $k$ & $\gamma_c$ \\ \hline
 	\label{fig:cosine_abserror}
 \end{subfigure}
 \caption{Cosine bell solution after 10 revolutions with $N=10201$ nodes and stencil size $n=101$.
-Hyperviscosity parameters are $k = 8$, $\gamma_c = 5(10^{-2})$. 
+Hyperviscosity parameters are $k = 8$, $\gamma_c = 5(10^{-2})$. \authnote{Insert color figures}
 }
  \label{fig:cosine_10revs}
 \end{center}
