--- a/latex/performance_content/optimizations.tex
+++ b/latex/performance_content/optimizations.tex
@@ -30,7 +30,7 @@ These results were run on Keeneland. The changes to MPI communication are the re
 \begin{subfigure}[b]{0.425\textwidth}
 \centering
 \includegraphics[width=1.0\textwidth]{../figures/chapter5/alltoallv/speedup_1CPU_vs_NCPU.pdf}
-\caption{Multi-CPU strong scaling on Keeneland for one warp per stencil}
+\caption{Multi-CPU strong scaling on Keeneland for one warp per stencil \authnote{Check if this is SpMV only or with comm...}}
 \label{fig:alltoall_multicpu_scaling}
 \end{subfigure} 
 \begin{subfigure}[b]{0.425\textwidth}
