--- a/latex/iteration2.tex
+++ b/latex/iteration2.tex
@@ -60,6 +60,7 @@
 %\include{introduction}
 %\include{related_work}
 \include{rbffd_method}
+\include{ordering_and_preconditioning}
 \include{distributed_solver}
 \include{ViennaCL}
 \include{future_of_gpus}
